--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ CMakeScripts
 Testing
 Makefile
 cmake_install.cmake
-install_manifest.txt
+cmake-build-debug*
+*_export
 compile_commands.json
 CTestTestfile.cmake
 _deps
