chore: added build on file modify

--- a/EZZ/CMakeLists.txt
+++ b/EZZ/CMakeLists.txt
@@ -15,20 +15,28 @@ add_executable(${PROJECT_NAME} main.c)
 #example: you will be now able to do something like #define FILE_PATH "./inputfile.txt" and then fopen(FILE_PATH, ...) without errors!
 set(FILES in.txt)
 
-#-------NON-USER STUFF-------#
+#-------NON USER STUFF-------#
+#Do not modify this if you are not sure!
+
 #copies the file inside export folder
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
+        DEPENDS ${PROJECT_NAME}
         COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../${LAB_NAME}_export/${PROJECT_NAME}/)
+        ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../${GLOBAL_PROJECT_NAME}_export/${PROJECT_NAME}/)
 
 #Removes from exported the CMakeLists.txt
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
+        DEPENDS ${PROJECT_NAME}
         COMMAND ${CMAKE_COMMAND} -E remove
-        ${CMAKE_CURRENT_SOURCE_DIR}/../${LAB_NAME}_export/${PROJECT_NAME}/CMakeLists.txt)
+        ${CMAKE_CURRENT_SOURCE_DIR}/../${GLOBAL_PROJECT_NAME}_export/${PROJECT_NAME}/CMakeLists.txt)
 
 foreach(file ${FILES})
-    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    #for every file, copy it in target build directory
+    add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
+            DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${file}
             COMMAND ${CMAKE_COMMAND} -E copy_if_different
             ${CMAKE_CURRENT_SOURCE_DIR}/${file} $<TARGET_FILE_DIR:${PROJECT_NAME}>/${file}
             )
+    #add the file as source property: build will be triggered on file upload
+    set_property(SOURCE main.c APPEND PROPERTY OBJECT_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${file})
 endforeach()
