chore: added images and updated readme.md

--- a/EZZ/CMakeLists.txt
+++ b/EZZ/CMakeLists.txt
@@ -22,13 +22,13 @@ set(FILES in.txt)
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
         DEPENDS ${PROJECT_NAME}
         COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../${GLOBAL_PROJECT_NAME}_export/${PROJECT_NAME}/)
+        ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../${LAB_NAME}_export/${PROJECT_NAME}/)
 
 #Removes from exported the CMakeLists.txt
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
         DEPENDS ${PROJECT_NAME}
         COMMAND ${CMAKE_COMMAND} -E remove
-        ${CMAKE_CURRENT_SOURCE_DIR}/../${GLOBAL_PROJECT_NAME}_export/${PROJECT_NAME}/CMakeLists.txt)
+        ${CMAKE_CURRENT_SOURCE_DIR}/../${LAB_NAME}_export/${PROJECT_NAME}/CMakeLists.txt)
 
 foreach(file ${FILES})
     #for every file, copy it in target build directory
